fix: в блоке no-letter-spacing свойство letter-spacing явно определено в 0

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,7 +123,7 @@
 
 /* класс для обнуления общего межбуквенного расстояния для последней буквы */
 .no-letter-spacing {
-  letter-spacing: initial;
+  letter-spacing: 0px;
 }
 
 /* контейнер для подзаголовка и кнопки */
